--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,4 @@
-Django==1.8
+Django==1.8.4
 django-crispy-forms==1.4.0
-django-registration-redux==1.1
+django-registration-redux==1.4
+requests==2.10.0
